icon spacing fix

--- a/frontend/src/components/Spots/SpotIndex.css
+++ b/frontend/src/components/Spots/SpotIndex.css
@@ -88,4 +88,5 @@
 
 .fa-star {
     display: flex;
+    margin-right: 3px;
 }
